--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -1,4 +1,20 @@
 <%= link_to 'Create a new link', new_link_path %>
-<ul>
-  <% @links.each do |link| %><li><%= link.original %> | <%= root_url + link.shortened %> | <%= link_to 'x', delete_link_path(link), method: :delete %></li><% end %>
-</ul>
+
+<table class="links-table">
+  <thead>
+    <tr>
+      <td>Original</td>
+      <td>Shortened</td>
+      <td></td>
+    </tr>
+  </thead>
+  <tbody>
+    <% @links.each do |link| %>
+      <tr>
+        <td><%=link.original%></td>
+        <td><%= root_url + link.shortened %></td>
+        <td><%= link_to 'delete', delete_link_path(link), method: :delete %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
